@@ -97,7 +97,7 @@ out:
     return status;
 }
 
-int ucs_netif_is_active(const char *if_name)
+int ucs_netif_is_active(const char *if_name, int enable_loopback)
 {
     ucs_status_t status;
     struct ifreq ifr;
@@ -112,6 +112,9 @@ int ucs_netif_is_active(const char *if_name)
         return 0;
     }
 
+    if (!enable_loopback && (ifr.ifr_flags & IFF_LOOPBACK)) {
+        return 0;
+    }
     return ucs_netif_flags_is_active(ifr.ifr_flags);
 }
 
@@ -791,7 +794,7 @@ ucs_status_t ucs_sockaddr_get_ifname(int fd, char *ifname_str, size_t max_strlen
         return UCS_ERR_INVALID_PARAM;
     }
 
-    ucs_debug("check ifname for socket on %s", 
+    ucs_debug("check ifname for socket on %s",
               ucs_sockaddr_str(my_addr, str_local_addr, UCS_SOCKADDR_STRING_LEN));
 
     if (getifaddrs(&ifaddrs)) {
@@ -807,7 +810,7 @@ ucs_status_t ucs_sockaddr_get_ifname(int fd, char *ifname_str, size_t max_strlen
             continue;
         }
 
-        if (((sa->sa_family == AF_INET) ||(sa->sa_family == AF_INET6)) && 
+        if (((sa->sa_family == AF_INET) ||(sa->sa_family == AF_INET6)) &&
             (!ucs_sockaddr_cmp(sa, my_addr, NULL))) {
             ucs_debug("matching ip found iface on %s", ifa->ifa_name);
             ucs_strncpy_safe(ifname_str, ifa->ifa_name, max_strlen);
